feat: :sparkles: implementation functions find user by id
